--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme 
-
 title: [Bertrand's Lectures]
 description: [A place to share slides]
+logo: /assets/img/shadok_diplome.jpg
+
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
