--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: [Bertrand's Lectures]
-description: [A place to share slides]
+description: [Teaching resources cabin]
 logo: /assets/img/shadok_diplome_small.jpg
 
 remote_theme: pages-themes/minimal@v0.2.0
